--- a/.github/workflows/deploy_imageGen.yml
+++ b/.github/workflows/deploy_imageGen.yml
@@ -1,1 +1,45 @@
+name: Deploy ImageGen
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install AWS CLI
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y awscli
+        
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Build
+      run: |
+        sam build
+
+    - name: Deploy
+      run: |
+        sam deploy --stack-name image-gen \
+                   --region ${{ secrets.AWS_REGION }} \
+                   --capabilities CAPABILITY_IAM \
+                   --no-confirm-changeset \
+                   --resolve-s3
+        
+
 
